Updated text in navbar buttons

--- a/group_play.html
+++ b/group_play.html
@@ -21,9 +21,9 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <a class="btn btn-primary allskills myprog" href="progress.html" role="button">My Progress</a>&#160; &#160;
-    <a class="btn btn-info heychris" href="userpage.html" role="button">Hey Chris!</a>&#160; &#160;
-      <button class="btn btn-success my-2 my-sm-0 logout" type="submit">Logout</button>
+      <a class="btn btn-primary allskills myprog" href="progress.html" role="button">Progress</a>&#160; &#160;
+    <a class="btn btn-info heychris" href="userpage.html" role="button">My Page</a>&#160; &#160;
+      <a class="btn btn-success my-2 my-sm-0 logout" href="homepage.html" role="button">Hey Chris! (Logout)</a>
     </form>
   </div>
 </nav>
