--- a/skills_list_after.html
+++ b/skills_list_after.html
@@ -46,9 +46,9 @@
             </div>
             <div class="collapse navbar-collapse">
                 <div class="navbar-form navbar-right">
-                    <a class="btn btn-primary" href="progress.html" role="button">My Progress</a>
-                    <a class="btn btn-info" href="userpage.html" role="button">Hey Chris!</a>
-                    <button type="button" class="btn btn-success" href="#">Logout</button>
+                    <a class="btn btn-primary" href="progress.html" role="button">Progress</a>
+                    <a class="btn btn-info" href="userpage.html" role="button">My Page</a>
+                    <a role="button" class="btn btn-success" href="homepage.html">Hey Chris! (Logout)</a>
                 </div>
                 <form class="navbar-form navbar-left">
                   <a class="btn btn-primary" href="skills_list.html" role="button">All Skills/Groups</a>
