--- a/progress.html
+++ b/progress.html
@@ -23,9 +23,9 @@
 	    </div>
 	    <div class="collapse navbar-collapse">
 	        <div class="navbar-form navbar-right">
-	        	<a class="btn btn-primary" href="progress.html" role="button">My Progress</a>
-	            <a class="btn btn-info" href="userpage.html" role="button">Hey Chris!</a>
-	            <button type="button" class="btn btn-success" href="#">Logout</button>
+	        	<a class="btn btn-primary" href="progress.html" role="button">Progress</a>
+	            <a class="btn btn-info" href="userpage.html" role="button">My Page</a>
+	            <a role="button" class="btn btn-success" href="homepage.html">Hey Chris! (Logout)</a>
 	        </div>
 	        <form class="navbar-form navbar-left">
 	          <a class="btn btn-primary" href="skills_list.html?" role="button">All Skills/Groups</a>
@@ -42,7 +42,7 @@
 
 	<div class="header">
         <h1 class="title-layouts">
-          <span class="fa fa-object-group" aria-hidden="true"></span>My Progress</h1>
+          <span class="fa fa-object-group" aria-hidden="true"></span>Skill Progress</h1>
       </div>
 
 	 <div class="modal fade" id="goal-setting-modal" role="dialog">
