--- a/group_play.html
+++ b/group_play.html
@@ -47,8 +47,8 @@
     <span class="badge badge-primary badge-pill"></span>
   </li>
   <li class="list-group-item list-group-item-info d-flex justify-content-between align-items-center" id="groupplay">
-    <a data-toggle="modal" data-target="#modal2"><img src="images/info.png" class="infobutton" onmouseover="" style="cursor: pointer;"></a>
-    <div class="groupplayname">Group Play </div>
+    <img src="images/info.png" class="infobutton" onmouseover="" style="cursor: pointer;">
+    <div class="groupplayname">Concert Prep</div>
     <span class="badge badge-primary badge-pill">5</span>
   </li>
   </li>
@@ -58,14 +58,14 @@
     <span class="badge badge-primary badge-pill">14</span>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-center" id="concertprep">
-  	    <img src="images/info.png" class="infobutton" onmouseover="" style="cursor: pointer;">
-    <div class="concertprep">Concert Prep</div>
+    <a data-toggle="modal" data-target="#modal2"><img src="images/info.png" class="infobutton" onmouseover="" style="cursor: pointer;"></a>
+    <div class="concertprep">Group Play</div>
     <span class="badge badge-primary badge-pill" onclick="joingroup()"  onmouseover="" style="cursor: pointer;" id="joingroup">Join Group</span>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-center groupsjoined">
   	    <img src="images/info.png" class="infobutton" onmouseover="" style="cursor: pointer;">
-    <div class="classical">Classical Music Recommendations</div>
-    <span class="badge badge-primary badge-pill"></span>
+    <div class="classical">Classical Music</div>
+    <span class="badge badge-primary badge-pill">1</span>
   </li>
    <li class="list-group-item d-flex justify-content-between align-items-center groupsjoined">
    	    <img src="images/info.png" class="infobutton" onmouseover="" style="cursor: pointer;">
@@ -122,12 +122,12 @@
   <div class="card-body" id="card-body">
   	<div class="card chatitem">
   <div class="card-body"  id="chat0">
-    bob1324: Let's play this Saturday at 5?
+    James02: Cool idea man!
   </div>
 </div>
 <div class="card chatitem">
   <div class="card-body" id="chat1">
-    mechwiz: Oh yea that works for me!
+    alex305: Yeah, definitely think you should try out the violins.
   </div>
 </div>
 <div class="card chatitem">
