--- a/group_play.html
+++ b/group_play.html
@@ -183,7 +183,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>&#160; &#160;
-        <button type="button" class="btn btn-primary" onclick = "savegroup()" data-dismiss="modal">Save</button>
+        <button type="button" class="btn btn-primary" onclick = "savegroup()" data-dismiss="modal">Add Group</button>
       </div>
     </div>
   </div>
