changed Michael to Chris

--- a/progress.html
+++ b/progress.html
@@ -131,8 +131,8 @@
                   <div class="collapse" id="collapseExample">
                     <div class="thumbnail chat">
                       <div id="chatbox" class="container">
-                      <p><b>Bruce:</b> Good job, Michael!</p>
-                      <p><b>Mary:</b> Fantastic, Michael! You should play next time.</p>
+                      <p><b>Bruce:</b> Good job, Chris!</p>
+                      <p><b>Mary:</b> Fantastic, Chris! You should play next time.</p>
                       <p class="input_comment"></p>
                     </div>
                   </div>
@@ -181,8 +181,8 @@
                   <div class="collapse" id="collapseExample2">
                       <div class="thumbnail chat">
                       <div id="chatbox2" class="container">
-                      <p><b>John:</b> Good job, Michael!</p>
-                      <p><b>Susan:</b> Fantastic, Michael! You should sell your craftwork!</p>
+                      <p><b>John:</b> Good job, Chris!</p>
+                      <p><b>Susan:</b> Fantastic, Chris! You should sell your craftwork!</p>
                       <p class="input_comment2"></p>
                     </div>
                   </div>
